# Auto_classif_data

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_exploration.ipynb  02_preparation_features.ipynb  03_modeles_baseline.ipynb  04_modeles_avances.ipynb  05_modeles_optimisation.ipynb
