[project]
name = "auto-classif-data"
version = "0.1.0"
description = "Analyse d'attrition RH pour TechNova Partners (EDA, modèles de classification, SHAP)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [{name = "Daniel Guedj"}]

dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16.0",
  "scikit-learn>=1.5",
  "imbalanced-learn>=0.12",
  "xgboost>=2.0",
  "catboost>=1.2",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "tqdm>=4.66",
  "python-dateutil>=2.8",
  "shap==0.46.0",
]

[dependency-groups]
# Active la résolution stricte et le lock
dev = [
  "black>=24.3",
  "isort>=5.13",
  "ruff>=0.5",
]

[tool.black]
line-length = 100
target-version = ["py310","py311","py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
